# fantasy-sports

./: .editorconfig  .env.example  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .yamllint.yaml  ARCHITECTURE.md  CLAUDE.md  FIX_MODEL_PREDICTIONS.md  Makefile  README.md  SETUP_COMPLETE.md  SQLITE_OPTIMIZATION_PLAN.md  TRAINING_GUIDE.md  implementation_validation.py  package.json  pyproject.toml  refactoring_request.md  requirements-dev.txt  requirements.txt  test_basic_functionality.py
.claude/agents/: architect.md  python-specialist.md  pytorch-specialist.md
data/database/: nfl_dfs.db
data/draftkings/salaries/: classic-2025-09-07.csv
data/historical/Kaggle/NFL-upto-2024/: spreadspoke_scores_2018-2024.csv
dfs/: .env.example  COMPLETE_APP_REFACTORING_GUIDE.md  DST_MODEL_OPTIMIZATION_GUIDE.md  FEATURE_SCHEMA.md  HYPERPARAMETER_TUNING_GUIDE.md  MODEL_REFACTORING_GUIDE.md  MODEL_TUNING_GUIDE.md  POSITION_OPTIMIZATION_GUIDE.md  POSITION_TRAINING_GUIDE.md  RB_MODEL_OPTIMIZATION_GUIDE.md  README.md  SQL_OPTIMIZATION_RESULTS.md  TE_MODEL_OPTIMIZATION_GUIDE.md  WR_MODEL_OPTIMIZATION_GUIDE.md  __init__.py  backtest.py  calculate_snaps.py  data.py  data_utils.py  db_manager.py  feature_names.json  features.py  helpers.py  hyperparameter_manager.py  hyperparameters.yaml  metrics.py  models.py  models_dst_simple.py  nn_components.py  optimize.py  predictions.csv  pyproject.toml  requirements.txt  run.py  scoring.py  setup.sh  test_db_performance.py  test_dst_fix.py  test_hyperparameter_tuning.py  test_qb_optimization.py  (+9 more)
dfs/cli/: __init__.py  main.py
dfs/cli/commands/: __init__.py  backtest.py  collect.py  optimize.py  predict.py  train.py
dfs/core/: __init__.py  config.py  exceptions.py  logging.py
dfs/data/: DKSalaries.csv  __init__.py  injuries.csv
dfs/data/collectors/: __init__.py  nfl_data.py
dfs/data/database/: __init__.py  manager.py  queries.py  schema.py
dfs/models/: __init__.py  dst_model.pth  dst_model_catboost.cbm  dst_model_nn.pth  dst_model_simplified.pkl  dst_model_xgb.json  factory.py  model_performance.md  models.txt  qb_model.pth  qb_model_nn.pth  qb_model_xgb.json  rb_model.pth  rb_model_nn.pth  rb_model_xgb.json  te_model.pth  te_model_nn.pth  te_model_xgb.json  wr_model.pth  wr_model_nn.pth  wr_model_xgb.json
dfs/models/base/: __init__.py  neural.py  utils.py
dfs/old_optimization/: DST_MODEL_OPTIMIZATION_GUIDE.md  QB_MODEL_OPTIMIZATION_GUIDE.md  RB_MODEL_OPTIMIZATION_GUIDE.md  TE_MODEL_OPTIMIZATION_GUIDE.md  WR_MODEL_OPTIMIZATION_GUIDE.md
dfs/tests/: test_features.py  test_training.py
docs/: DK-NFLClassic-Rules.md  model-training-guide.md  pytorch_implementation_summary.md  stadium_data_integration_guide.md  vegas_odds_integration_guide.md  weather_integration_guide.md  weekly-update-guide.md
docs/architecture/: 01-system-overview.md  02-data-models.md  03-api-specifications.md  04-component-architecture.md  05-integration-specifications.md  06-data-processing-pipeline.md  07-ml-pipeline.md  08-optimization-algorithms.md  09-security-design.md  10-performance-caching.md  11-monitoring-observability.md  12-testing-qa.md  13-deployment-infrastructure.md  14-package-management.md  progress.md
docs/pre-plans/: learning-plan.md  nfl-tech-spec.md
models/: DEF_DEF_model_20250818_185954.pkl  DEF_DEF_model_20250818_185954_preprocessor.pkl  DEF_DEF_model_20250818_234405.pkl  DEF_DEF_model_20250818_234405_preprocessor.pkl  QB_QB_model_20250818_185825.pkl  QB_QB_model_20250818_185825_preprocessor.pkl  QB_QB_model_20250818_234129.pkl  QB_QB_model_20250818_234129_preprocessor.pkl  QB_QB_test_no_corr_20250818_230104.pkl  QB_QB_test_no_corr_20250818_230104_preprocessor.pkl  RB_RB_model_20250818_185848.pkl  RB_RB_model_20250818_185848_preprocessor.pkl  RB_RB_model_20250818_234210.pkl  RB_RB_model_20250818_234210_preprocessor.pkl  TE_TE_model_20250818_185941.pkl  TE_TE_model_20250818_185941_preprocessor.pkl  TE_TE_model_20250818_234352.pkl  TE_TE_model_20250818_234352_preprocessor.pkl  WR_WR_model_20250818_185924.pkl  WR_WR_model_20250818_185924_preprocessor.pkl  WR_WR_model_20250818_234318.pkl  WR_WR_model_20250818_234318_preprocessor.pkl
scripts/: draftKings.js  update_weekly_data.py  verify_setup.py
simple_dfs/: README.md  data.py  optimize.py  requirements.txt  run.py  utils.py
simple_dfs/data/: nfl_dfs.db
simple_dfs/lineups/: lineup_1_balanced.csv
simple_dfs/models/: def_model.pth  qb_model.pth  rb_model.pth  te_model.pth  wr_model.pth
src/: __init__.py
src/api/: __init__.py  main.py  schemas.py
src/api/routers/: data.py  game_selection.py  optimization.py  predictions.py
src/cli/: __init__.py  __main__.py  collect_data.py  game_selection.py  train_models.py
src/config/: __init__.py  settings.py
src/data/: __init__.py
src/data/collection/: __init__.py  data_orchestrator.py  defense_fantasy_collector.py  defensive_stats_collector.py  dk_collector.py  nfl_collector.py  stadium_collector.py  vegas_collector.py  vegas_odds_collector.py  weather_collector.py  weather_validation.py
src/data/processing/: feature_extractor.py
src/database/: __init__.py  connection.py  init_db.py  models.py
src/ml/: __init__.py  exceptions.py  registry.py
src/ml/models/: __init__.py  advanced_features.py  base.py  correlated_neural_model.py  ensemble.py  evaluation.py  neural_models.py  position_models.py  pytorch_loader.py
src/ml/training/: __init__.py  correlation_features.py  data_preparation.py  model_trainer.py  pipeline.py
src/optimization/: __init__.py  game_selection.py  lineup_builder.py
tests/: test_setup.py
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx
web/src/pages/: Home.tsx  Optimize.tsx  Predictions.tsx  Upload.tsx
