
# [project.scripts]
# lint = "ruff check ."
# lint-fix = "ruff check . --fix"
# format = "ruff format ."
# format-check = "ruff format . --check"

[project]
name = "dfs"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "I",    # isort
]

ignore = [
    "E501",  # line too long (let formatter handle this)
]

fixable = [
    "F401",   # Remove unused imports
    "F841",   # Remove unused variables (be careful)
    "I",      # Fix import sorting
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["S101"]      # Allow assert statements in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
